# MidiCore

./: .cproject  .cproject.backup  .cproject.backup2  .gitignore  .mxproject  .project  ARCHITECTURE_DECISION.md  BOOTLOADER_IMPLEMENTATION.md  BOOTLOADER_VERIFICATION.md  BUILD_AND_FLASH_INSTRUCTIONS.md  BUILD_AND_TEST.md  BUILD_ERRORS_ANALYSIS.txt  CLEAN_DEBUG_OUTPUT_FINAL.md  CLEAN_OUTPUT_CONFIRMED.md  CLIP_SESSION_TEMPLATE_IMPLEMENTATION_GUIDE.md  CLI_BUILD_ERRORS_RESOLVED.md  CLI_COMPILATION_ERRORS.md  CLI_COMPILATION_FIXES.md  CLI_COMPILATION_FIXES_COMPLETE.md  CLI_COMPILATION_FIXES_SUMMARY.md  CLI_ERRORS_SUMMARY.txt  CLI_FINAL_SUMMARY.md  CLI_FIXES_ALL_11_FILES_COMPLETE.md  CLI_FIXES_APPLIED.md  CLI_FIXES_COMPLETION_REPORT.md  CLI_FIXES_EXECUTIVE_SUMMARY.md  CLI_FIXES_FINAL_COMPLETE.md  CLI_FIXES_SUMMARY.md  CLI_FIXES_SUMMARY_FINAL.md  CLI_FIXES_VERIFICATION.md  CLI_QUICK_REFERENCE.md  CLI_SYSTEM_COMPLETE_FIX_REPORT.md  CLI_USER_GUIDE.md  CLI_WARNINGS_FIXED_AND_TERMINAL_VERIFIED.md  COMBINED_KEY_NAVIGATION.md  COMPATIBILITY_INDEX.md  COMPATIBILITY_SUMMARY.md  COMPILE_TIME_BAUDRATE.md  COM_PORT_DISCOVERY_EXPLANATION.md  CONFIGURATION_CUBEIDE.md  (+123 more)
App/: ain_midi_task.c  ain_midi_task.h  ain_raw_debug_task.c  ain_raw_debug_task.h  app_entry.c  app_entry.h  app_init.c  app_init.h  bootloader_app.c  bootloader_app.h  calibration_task.c  calibration_task.h  din_selftest.c  din_selftest.h  freertos_hooks.c  freertos_hooks.h  i2c_scan.c  i2c_scan.h  input_task.c  input_task.h  looper_selftest.c  looper_selftest.h  midi_io_task.c  (+7 more)
MidiCoreStudio/: BUILD.md  CMakeLists.txt  README.md
MidiCoreStudio/Source/: Main.cpp  MainWindow.cpp  MainWindow.h
MidiCoreStudio/Source/CDCComm/: CDCManager.cpp  CDCManager.h
MidiCoreStudio/Source/Components/: CCController.cpp  CCController.h  DeviceManager.cpp  DeviceManager.h  FileManagerComponent.cpp  FileManagerComponent.h  FirmwareUpdater.cpp  FirmwareUpdater.h  MidiMonitor.cpp  MidiMonitor.h  Terminal.cpp  Terminal.h  VirtualPiano.cpp  VirtualPiano.h
MidiCoreStudio/Source/MidiIO/: MidiManager.cpp  MidiManager.h
(+899 files in other folders)
